--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html>
 <head>
 	<meta http-equiv="Cache-Control" content="no-cache"/>
+	<link rel="stylesheet" type="text/css" href="css/game.css">
+	<link rel="icon" href="img/sourceco_icon.png" type="image/x-icon">
 	<title>Duck Hunter GAME</title>
 </head>
 <body>
-
+	<audio id="soun1" src="./shoot.mp3" preload="auto"></audio>
+	<input type="checkbox" id="duck1" onclick="document.getElementById('sound1').play();">
+	<label for="duck1" class="duck"></label>
+	<input type="checkbox" id="duck2" onclick="document.getElementById('sound1').play();>
+	<label for="duck2" class="duck"></label>
+	<input type="checkbox" id="duck3" onclick="document.getElementById('sound1').play();>
+	<label for="duck3" class="duck"></label>
+	<input type="checkbox" id="duck4" onclick="document.getElementById('sound1').play();>
+	<label for="duck4" class="duck"></label>
+	<input type="checkbox" id="duck5" onclick="document.getElementById('sound1').play();>
+	<label for="duck5" class="duck"></label>
+	<div class="score"></div>
 </body>
 </html>
