--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 	<input type="checkbox" id="duck5" onclick="document.getElementById('sound1').play();>
 	<label for="duck5" class="duck"></label>
 	<div class="score"></div>
+	dasdhjasvdhjasdjas
 </body>
 </html>
