--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Duck Hunter GAME</title>
 </head>
 <body>
-	<audio id="soun1" src="./shoot.mp3" preload="auto"></audio>
+	<audio id="sound1" src="./shoot.mp3" preload="auto"></audio>
 	<input type="checkbox" id="duck1" onclick="document.getElementById('sound1').play();">
 	<label for="duck1" class="duck"></label>
 	<input type="checkbox" id="duck2" onclick="document.getElementById('sound1').play();>
